# EvoSim

./: .gitignore  CNAME  Cargo.toml  LICENSE  Notes.md  README.md  Untitled.md  graph.dot  index.html
.obsidian/: app.json  appearance.json  community-plugins.json  core-plugins-migration.json  core-plugins.json  workspace.json
bevytest/: Cargo.toml
bevytest/src/: blob.rs  bouncing_ball.rs  bug.rs  config.rs  init.rs  lib.rs  main.rs  physical_world.rs  rapier_test.rs  run.rs  wall.rs
doc/: crates.js  search-index.js  source-files.js
doc/evosim/: macro.logger_info.html  macro.logger_warn.html  sidebar-items.js
docs/: Gene.html  Gene.md  Mutation.html  Mutation.md  Neural.html  Neural.md  Notes.md  OctopusNet.html  OctopusNet.md  Physics.html  Physics.md  Training.html  Training.md  UserInstruction.md  dev_log.md  gene.html  help.html  index.html  index.md  mutation.html  neural.html  octopusnet.html  physics.html  settings.html  training.html  userinstruction.html
docs-d/: dev_log.md
docs/evosim/: all.html  fn.main.html  index.html  macro.logger_error.html
lib/scripts/: graph_view.js
reports/: Gene.md  Neural.md  OctopusNet.md  Physics.md  index.md
src/: block.rs  componet.rs  consts.rs  contorl.rs  graphics.rs  logger.rs  main.rs
src/blob/: blob.rs  blob_builder.rs  block.rs  geno_blob_builder.rs  mod.rs
src/brain/: mod.rs  neuron.rs  nn.rs  resource.rs  signal.rs
src/contorl/: contorl.rs  mod.rs  resource.rs  train_move.rs  update.rs
src/io/: evoio.rs  export.rs  import.rs  mod.rs
src/mis/: joint_sensor.rs  joint_test.rs  old_main.rs
(+317 files in other folders)
