[package]
name = "evosim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11"
bevy_pancam = "0.9.0"
bevy_rapier2d = {git = "https://github.com/midstreeeam/bevy_rapier.git", branch = "new_dependencies"}
ndarray = "0.15.6"
rand = "0.8.5"
