[package]
name = "evosim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11"
bevy_pancam = "0.9.0"
# bevy_rapier2d = "0.22.0"
itertools = "0.11.0"
ndarray = {version = "0.15.6", features = ["serde"]}
rand = "0.8.5"
bevy_rapier2d = {git = "https://github.com/midstreeeam/bevy_rapier.git", branch = "new_dependencies"}
serde = "1.0.174"
serde_json = "1.0.103"
chrono = "0.4.26"
rand_distr = "0.4.3"
